added nownodes to hosting merchat

--- a/community/merchants/index.html
+++ b/community/merchants/index.html
@@ -153,7 +153,8 @@ permalink: /community/merchants/index.html
                       <label class="acc-label" for="chck7">{% t merchants.button7 %}</label>
                       <div class="accordion-content col" id="btn7-content">
                             <div class="row">
-                               <div class="col"><a href="https://www.allnodes.com/firo/host?utm_source=mbuzz&utm_medium=hosting&utm_campaign=firo" target="_blank"><img src="/img/merchants/logos/allnodes-logo.png" alt="Allnodes logo"/></a></div>      
+                               <div class="col"><a href="https://www.allnodes.com/firo/host?utm_source=mbuzz&utm_medium=hosting&utm_campaign=firo" target="_blank"><img src="/img/merchants/logos/allnodes-logo.png" alt="Allnodes logo"/></a></div>
+                               <div class="col"><a href="https://nownodes.io/nodes/firo" target="_blank"><img src="/img/merchants/logos/nownodes-logo.png" alt="NOWNodes logo"/></a></div>   
                             </div>
                       </div>
                   </div>
