--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -77,35 +77,35 @@ permalink: /get-firo/download/index.html
                         <p class="tagline">{% t download.option2 %}</p>
                         <div class="inner">
                             <h3>{% t download.electron %}</h3>
-                            <p class="wversion">2.2.2</p>
+                            <p class="wversion">3.0.0</p>
                             <p class="changelog"><a href="https://github.com/firoorg/firo-client/releases/latest" target="_blank">{% t download.changelog %}</a></p>
                             <div class="system win">
-                                <a href="https://github.com/firoorg/firo-client/releases/download/v2.2.2/Firo-ClientSetup-2.2.2.exe">{% t download.downloadelectronw %}</a>
+                                <a href="https://github.com/firoorg/firo-client/releases/download/v3.0.0/Firo-Client-Setup.3.0.0.exe">{% t download.downloadelectronw %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="wh3">
                                     <label class="tab-label" for="wh3">{% t download.hasheswindows %}</label>
                                     <div class="tab-content">
-                                      <p>2c9fdb1ba55c2cd4cf935d0063173cb3d8f4c5af5d5721f331e8995e093e612e</p>
+                                      <p>5ee08267b053a6c102f2eeecd33f39fb842b3053f0ef920c10c9115cdb508a50</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="system mac">
-                                <a href="https://github.com/firoorg/firo-client/releases/download/v2.2.2/Firo-Client-2.2.2.dmg">{% t download.downloadelectronm %}</a>
+                                <a href="https://github.com/firoorg/firo-client/releases/download/v3.0.0/Firo-Client-3.0.0.AppImage">{% t download.downloadelectronm %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="mh2">
                                     <label class="tab-label" for="mh2">{% t download.hashesmac %}</label>
                                     <div class="tab-content">
-                                      <p>3aa8acf6987518dcfee871abed8a0ca7d904717f76ada310dda30e66900bacd4</p>
+                                      <p>fcf9c688f6831ced0f90bb93c006c69f3647630dd3b21c4ddcf3eccc8891d4e5</p>
                                     </div>
                               </div>
                             </div>
                             <div class="system linux">
-                                <a href="https://github.com/firoorg/firo-client/releases/download/v2.2.2/Firo-Client-2.2.2.AppImage">{% t download.downloadelectronl %}</a>
+                                <a href="https://github.com/firoorg/firo-client/releases/download/v3.0.0/Firo-Client-3.0.0.AppImage">{% t download.downloadelectronl %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="lh2">
                                     <label class="tab-label" for="lh2">{% t download.hasheslinux %}</label>
                                     <div class="tab-content">
-                                      <p>020424ff35555a9e57db31d9c1c4af55d985bd08ee649c28a02e7cfaea8bc3da</p>
+                                      <p>b1b71d9b6e1f9c880d1e405c08480719760124714e28ffd9d46750cc7fde9325</p>
                                     </div>
                               </div>
                             </div>
