--- a/community/merchants/index.html
+++ b/community/merchants/index.html
@@ -154,7 +154,7 @@ permalink: /community/merchants/index.html
                       <div class="accordion-content col" id="btn7-content">
                             <div class="row">
                                <div class="col"><a href="https://www.allnodes.com/firo/host?utm_source=mbuzz&utm_medium=hosting&utm_campaign=firo" target="_blank"><img src="/img/merchants/logos/allnodes-logo.png" alt="Allnodes logo"/></a></div>
-                               <div class="col"><a href="https://nownodes.io/nodes/firo" target="_blank"><img src="/img/merchants/logos/nownodes-logo.png" alt="NOWNodes logo"/></a></div>   
+                               <div class="col"><a href="http://bit.do/nownodes-firo" target="_blank"><img src="/img/merchants/logos/nownodes-logo.png" alt="NOWNodes logo"/></a></div>   
                             </div>
                       </div>
                   </div>
