update changenow url
Redirect to Firo changenow page

--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -159,7 +159,7 @@ permalink: /get-firo/buy-firo/index.html
               </div>
               <div class="row">
                   <div class="col">
-                      <a href="https://changenow.io/" target="_blank"><img src="/img/coin-swapping/change_now_logo.svg" alt=""/></a>
+                      <a href="https://changenow.io/currencies/firo?utm_campaign=firo%20website%20traffic" target="_blank"><img src="/img/coin-swapping/change_now_logo.svg" alt=""/></a>
                   </div>
                   <div class="col">
                       <a href="https://changelly.com/" target="_blank"><img src="/img/coin-swapping/changelly.svg" alt=""/></a>
