Add Spark code audit report

--- a/about/research/index.html
+++ b/about/research/index.html
@@ -60,11 +60,14 @@ permalink: /about/research/index.html
                           <div class="col">
                               <h3>{% t tech.audits %}</h3>
                               <div class="row papers">
+                                <div class="col">
+                                    <a href="/about/research/papers/lelantus_spark_code_audit_report.pdf" alt="" class="paper-title">Lelantus Spark code audit by Hashcloak</a>
+                                </div>
                                   <div class="col">
                                       <a href="/about/research/papers/Lelantus_Spark_Audit_Report.pdf" alt="" class="paper-title">Lelantus Spark cryptography audit by Hashcloak</a>
                                   </div>
                                   <div class="col">
-                                      <a href="/about/research/papers/LinfengSparkAudit.pdf" alt="" class="paper-title">Lelantus cryptography audit by Daniel (Linfeng) Zhao</a>
+                                      <a href="/about/research/papers/LinfengSparkAudit.pdf" alt="" class="paper-title">Lelantus Spark cryptography audit by Daniel (Linfeng) Zhao</a>
                                   </div>
                               </div>
                           </div>
