update exchange link

--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -135,7 +135,7 @@ permalink: /get-firo/buy-firo/index.html
                       <a href="https://www.hotbit.io/exchange?symbol=FIRO_USDT" target="_blank"><img src="/img/crypto-exchanges/hotbit.svg" alt=""/></a>
                   </div>
                   <div class="col">
-                      <a href="https://www.huobi.com/en-us/topic/double-reward/?invite_code=ngj99" target="_blank"><img src="/img/crypto-exchanges/huobi.svg" alt=""/></a>
+                      <a href="https://www.huobi.com/en-us/exchange/firo_usdt/" target="_blank"><img src="/img/crypto-exchanges/huobi.svg" alt=""/></a>
                   </div>
                   <div class="col">
                       <a href="https://www.mexc.com/exchange/FIRO_USDT" target="_blank"><img src="/img/crypto-exchanges/mxc_exchange.svg" alt=""/></a>
