--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -203,6 +203,9 @@ permalink: /get-firo/buy-firo/index.html
                   <div class="col">
                       <a href="https://www.wizardswap.io/" target="_blank"><img src="/img/coin-swapping/wizardswap.svg" alt=""/></a>
                   </div>
+                  <div class="col">
+                      <a href="https://xchange.me/" target="_blank"><img src="/img/coin-swapping/xm.png" alt=""/></a>
+                  </div>
               </div>
           </div>
       </section>
