--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -204,7 +204,7 @@ permalink: /get-firo/buy-firo/index.html
                       <a href="https://www.wizardswap.io/" target="_blank"><img src="/img/coin-swapping/wizardswap.svg" alt=""/></a>
                   </div>
                   <div class="col">
-                      <a href="https://xchange.me/" target="_blank"><img src="/img/coin-swapping/xm.png" alt=""/></a>
+                      <a href="https://xchange.me/" target="_blank"><img src="/img/coin-swapping/xmlogo.png" alt=""/></a>
                   </div>
               </div>
           </div>
