--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -189,7 +189,7 @@ permalink: /get-firo/buy-firo/index.html
                       <a href="https://swaplab.cc/" target="_blank"><img src="/img/coin-swapping/swaplab.svg" alt=""/></a>
                   </div>
                   <div class="col">
-                      <a href="https://swapspace.co/" target="_blank"><img src="/img/coin-swapping/swapspace.svg" alt=""/></a>
+                      <a href="https://swapspace.co/exchange/firo?utm_medium=referral&utm_source=firo&utm_campaign=coinlistings" target="_blank"><img src="/img/coin-swapping/swapspace.svg" alt=""/></a>
                   </div>
                   <div class="col">
                       <a href="https://swapswop.io/" target="_blank"><img src="/img/coin-swapping/swapswop.svg" alt=""/></a>
