--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -140,6 +140,9 @@ permalink: /get-firo/buy-firo/index.html
                   <div class="col">
                       <a href="https://wazirx.com/exchange/FIRO-USDT" target="_blank"><img src="/img/crypto-exchanges/wazirx.svg" alt=""/></a>
                   </div>
+                  <div class="col">
+                        <a href="https://accounts.pexpay.com/en/register?ref=13270340" target="_blank"><img src="/img/crypto-exchanges/pexpay.png" alt=""/></a>
+                  </div>
               </div>
           </div>
       </section>
