--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -26,7 +26,7 @@ permalink: /get-firo/download/index.html
                         <p>{% t download.verify %} <a href="https://github.com/firoorg/firo/blob/master/reuben.asc" target="_blank">{% t download.verify1 %}</a></p>
                     </div>
                     <div class="col">
-                        <p>{% t download.guide %} <a href="" target="_blank">{% t download.guide1 %}</a></p>
+                        <p>{% t download.guide %} <a href="https://firo.org/guide/" target="_blank">{% t download.guide1 %}</a></p>
                     </div>
               </div>
               <div class="row desk-wallets">
@@ -90,7 +90,7 @@ permalink: /get-firo/download/index.html
                                 </div>
                             </div>
                             <div class="system mac">
-                                <a href="https://github.com/firoorg/firo-client/releases/download/v3.0.1/Firo-Client-3.0.1.AppImage">{% t download.downloadelectronm %}</a>
+                                <a href="https://github.com/firoorg/firo-client/releases/download/v3.0.1/Firo-Client-3.0.1.dmg">{% t download.downloadelectronm %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="mh2">
                                     <label class="tab-label" for="mh2">{% t download.hashesmac %}</label>
