--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -191,6 +191,9 @@ permalink: /get-firo/buy-firo/index.html
                   <div class="col">
                       <a href="https://xchange.me/" target="_blank"><img src="/img/coin-swapping/xmlogo.png" alt=""/></a>
                   </div>
+                  <div class="col">
+                      <a href="https://swapika.com/" target="_blank"><img src="/img/coin-swapping/swapika-bw" alt=""/></a>
+                  </div>
               </div>
           </div>
       </section>
