--- a/community/merchants/index.html
+++ b/community/merchants/index.html
@@ -204,7 +204,8 @@ permalink: /community/merchants/index.html
                                 <div class="row">
                                    <div class="col"><a href="https://iking.io/" target="_blank"><img src="/img/merchants/logos/iking-logo.png" alt="Iking logo"/></a></div>    
                                    <div class="col"><a href="https://shopping.io" target="_blank"><img src="/img/merchants/logos/shopping-io-logo.png" alt="Shopping.io logo"/></a></div>    
-                                   <div class="col"><a href="https://particl.io/" target="_blank"><img src="/img/merchants/logos/particl-logo.png" alt="Particl logo"/></a></div>    
+                                   <div class="col"><a href="https://particl.io/" target="_blank"><img src="/img/merchants/logos/particl-logo.png" alt="Particl logo"/></a></div>
+                                   <div class="col"><a href="https://privoxy.io/" target="_blank"><img src="/img/merchants/privoxy-logo.png" alt="Privoxy logo"/></a></div>   
                                 </div>
                           </div>
                      </div>
