downloads: add missing alt texts and lazy loading of images

--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -241,7 +241,7 @@ permalink: /get-firo/download/index.html
               </div>
               <div class="row mob-wallets">
 		      <div class="col">
-                              <img src="/img/mobile-wallets/now-wallet-logo.png" alt="" />
+                              <img src="/img/mobile-wallets/now-wallet-logo.png" alt="NOW Wallet logo" loading="lazy"/>
                               <h4>NOW Wallet</h4>
                               <ul class="row">
                                  <li class="col">
@@ -257,7 +257,7 @@ permalink: /get-firo/download/index.html
                               </ul>
                           </div>
                           <div class="col">
-                              <img src="/img/mobile-wallets/zelcore.png" alt="" />
+                              <img src="/img/mobile-wallets/zelcore.png" alt="ZelCore Wallet Logo" loading="lazy"/>
                               <h4>ZelCore Wallet</h4>
                               <ul class="row">
                                  <li class="col">
@@ -278,7 +278,7 @@ permalink: /get-firo/download/index.html
                               </ul>
                           </div>
                           <div class="col">
-                              <img src="/img/mobile-wallets/guarda-new.png" alt="" />
+                              <img src="/img/mobile-wallets/guarda-new.png" alt="Guarda Wallet logo" loading="lazy"/>
                               <h4>Guarda Wallet</h4>
                               <ul class="row">
                                  <li class="col">
@@ -304,7 +304,7 @@ permalink: /get-firo/download/index.html
                               </ul>
                           </div>
                           <div class="col">
-                              <img src="/img/mobile-wallets/trust.png" alt="" />
+                              <img src="/img/mobile-wallets/trust.png" alt="Trust Wallet logo" loading="lazy"/>
                               <h4>Trust Wallet</h4>
                               <ul class="row">
                                  <li class="col">
@@ -320,7 +320,7 @@ permalink: /get-firo/download/index.html
                               </ul>
                           </div>
                           <div class="col">
-                              <img src="/img/mobile-wallets/coinomi.png" alt="" />
+                              <img src="/img/mobile-wallets/coinomi.png" alt="Coinomi Wallet logo" loading="lazy"/>
                               <h4>Coinomi Wallet</h4>
                               <ul class="row">
                                  <li class="col">
@@ -341,7 +341,7 @@ permalink: /get-firo/download/index.html
                               </ul>
                           </div>
                           <div class="col">
-                              <img src="/img/mobile-wallets/edge.png" alt="" />
+                              <img src="/img/mobile-wallets/edge.png" alt="Wdge Wallet logo" loading="lazy"/>
                               <h4>Edge Wallet</h4>
                               <ul class="row">
                                  <li class="col">
@@ -357,7 +357,7 @@ permalink: /get-firo/download/index.html
                               </ul>
                           </div>
                           <div class="col">
-                              <img src="/img/mobile-wallets/cobo.png" alt="" />
+                              <img src="/img/mobile-wallets/cobo.png" alt="Cobo Wallet logo" loading="lazy"/>
                               <h4>Cobo Wallet</h4>
                               <ul class="row">
                                  <li class="col">
@@ -373,7 +373,7 @@ permalink: /get-firo/download/index.html
                               </ul>
                           </div>
                           <div class="col">
-                              <img src="/img/mobile-wallets/ownbit.png" alt="" />
+                              <img src="/img/mobile-wallets/ownbit.png" alt="Ownbit Wallet logo" loading="lazy"/>
                               <h4>Ownbit Wallet</h4>
                               <ul class="row">
                                  <li class="col">
