Add Majestic Bank

--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -171,6 +171,9 @@ permalink: /get-firo/buy-firo/index.html
                     <a href="https://www.localparticl.com/" target="_blank"><img src="/img/coin-swapping/localparticl.svg" alt="Localparticl logo" title="localparticl.com"/></a>
                   </div>          
                   <div class="col">
+                    <a href="https://majesticbank.sc/" target="_blank"><img src="/img/coin-swapping/majesticbank.svg" alt="Majestic Bank logo" title="majesticbank.sc"/></a>
+                  </div>  
+                  <div class="col">
                       <a href="https://simpleswap.io/" target="_blank"><img src="/img/coin-swapping/simpleswap.svg" alt="SimpleSwap logo" title="simpleswap.io"/></a>
                   </div>
                   <div class="col">
