buy-firo: add exchange-assets to the list

--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -108,6 +108,9 @@ permalink: /get-firo/buy-firo/index.html
                       <a href="https://www.coinex.com/exchange/firo-usdt" target="_blank"><img src="/img/crypto-exchanges/coinex.svg" alt="Coinex logo" title="coinex.com"/></a>
                   </div>
                   <div class="col">
+                    <a href="https://exchange-assets.com/" target="_blank"><img src="/img/crypto-exchanges/exchange_assets.svg" alt="Exchange-Assets logo" title="exchange-assets.com"/></a>
+                  </div>
+                  <div class="col">
                       <a href="https://www.finexbox.com/market/pair/FIRO-BTC.html" target="_blank"><img src="/img/crypto-exchanges/finebox.svg" alt="finexbox logo" title="finexbox.com"/></a>
                   </div>
                   <div class="col">
