--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -241,149 +241,149 @@ permalink: /get-firo/download/index.html
               </div>
               <div class="row mob-wallets">
 		      <div class="col">
-                              <img src="/img/mobile-wallets/now-wallet-logo.png" alt="NOW Wallet logo" loading="lazy"/>
+                              <img class="ext-wallets" src="/img/mobile-wallets/now-wallet-logo.png" alt="NOW Wallet logo" loading="lazy"/>
                               <h4>NOW Wallet</h4>
                               <ul class="row">
                                  <li class="col">
                                     <a href="https://play.google.com/store/apps/details?id=com.nowwallet" target="_blank">
-                                         <i class="icon-android"></i>
+                                        <img src="/img/site-icons/footer/android.svg" title="Android" alt="android logo">
                                     </a>
                                  </li>
                                   <li class="col">
                                      <a href="https://apps.apple.com/app/now-wallet-bitcoin-crypto/id1591216386" target="_blank">
-                                          <i class="icon-apple"></i>
+                                        <img src="/img/site-icons/footer/apple.svg" title="Apple" alt="apple logo">
                                       </a>
                                  </li>
                               </ul>
                           </div>
                           <div class="col">
-                              <img src="/img/mobile-wallets/zelcore.png" alt="ZelCore Wallet Logo" loading="lazy"/>
+                              <img class="ext-wallets" src="/img/mobile-wallets/zelcore.png" alt="ZelCore Wallet Logo" loading="lazy"/>
                               <h4>ZelCore Wallet</h4>
                               <ul class="row">
                                  <li class="col">
                                     <a href="https://play.google.com/store/apps/details?id=com.zelcash.zelcore" target="_blank">
-                                         <i class="icon-android"></i>
+                                        <img src="/img/site-icons/footer/android.svg" title="Android" alt="android logo">
                                     </a>
                                  </li>
                                   <li class="col">
                                      <a href="https://itunes.apple.com/us/app/zelcore/id1436296839?mt=8" target="_blank">
-                                          <i class="icon-apple"></i>
+                                        <img src="/img/site-icons/footer/apple.svg" title="Apple" alt="apple logo">
                                       </a>
                                  </li>
                                  <li class="col">
                                      <a href="https://zel.network/zelcore" target="_blank">
-                                          <i class="icon-desktop"></i>
+                                        <img src="/img/site-icons/footer/desktop.svg" title="Desktop" alt="desktop logo">
                                       </a>
                                  </li>
                               </ul>
                           </div>
                           <div class="col">
-                              <img src="/img/mobile-wallets/guarda-new.png" alt="Guarda Wallet logo" loading="lazy"/>
+                              <img class="ext-wallets" src="/img/mobile-wallets/guarda-new.png" alt="Guarda Wallet logo" loading="lazy"/>
                               <h4>Guarda Wallet</h4>
                               <ul class="row">
                                  <li class="col">
                                     <a href="https://play.google.com/store/apps/details?id=com.crypto.multiwallet&hl=ru&ah=lGdAjI0WLmNFP29e2FB3-G6hW6I" target="_blank">
-                                         <i class="icon-android"></i>
+                                        <img src="/img/site-icons/footer/android.svg" title="Android" alt="android logo">
                                     </a>
                                  </li>
                                   <li class="col">
                                      <a href="https://itunes.apple.com/app/apple-store/id1442083982?pt=118900606&ct=frommainpage&mt=8" target="_blank">
-                                          <i class="icon-apple"></i>
+                                        <img src="/img/site-icons/footer/apple.svg" title="Apple" alt="apple logo">
                                       </a>
                                  </li>
                                  <li class="col">
                                      <a href="https://guarda.com/desktop" target="_blank">
-                                          <i class="icon-desktop"></i>
+                                        <img src="/img/site-icons/footer/desktop.svg" title="Desktop" alt="desktop logo">
                                       </a>
                                  </li>
                                  <li class="col">
                                      <a href="https://guarda.com/web-wallet" target="_blank">
-                                          <i class="icon-web"></i>
+                                        <img src="/img/site-icons/footer/web.svg" title="Web" alt="web logo">
                                       </a>
                                  </li>
                               </ul>
                           </div>
                           <div class="col">
-                              <img src="/img/mobile-wallets/trust.png" alt="Trust Wallet logo" loading="lazy"/>
+                              <img class="ext-wallets" src="/img/mobile-wallets/trust.png" alt="Trust Wallet logo" loading="lazy"/>
                               <h4>Trust Wallet</h4>
                               <ul class="row">
                                  <li class="col">
                                     <a href="https://play.google.com/store/apps/details?id=com.wallet.crypto.trustapp&hl=en" target="_blank">
-                                         <i class="icon-android"></i>
+                                        <img src="/img/site-icons/footer/android.svg" title="Android" alt="android logo">
                                     </a>
                                  </li>
                                   <li class="col">
                                      <a href="https://itunes.apple.com/us/app/trust-ethereum-wallet/id1288339409" target="_blank">
-                                          <i class="icon-apple"></i>
+                                        <img src="/img/site-icons/footer/apple.svg" title="Apple" alt="apple logo">
                                       </a>
                                  </li>
                               </ul>
                           </div>
                           <div class="col">
-                              <img src="/img/mobile-wallets/coinomi.png" alt="Coinomi Wallet logo" loading="lazy"/>
+                              <img class="ext-wallets" src="/img/mobile-wallets/coinomi.png" alt="Coinomi Wallet logo" loading="lazy"/>
                               <h4>Coinomi Wallet</h4>
                               <ul class="row">
                                  <li class="col">
                                     <a href="https://play.google.com/store/apps/details?id=com.coinomi.wallet" target="_blank">
-                                         <i class="icon-android"></i>
+                                        <img src="/img/site-icons/footer/android.svg" title="Android" alt="android logo">
                                     </a>
                                  </li>
                                   <li class="col">
                                      <a href="https://itunes.apple.com/us/app/coinomi-wallet/id1333588809" target="_blank">
-                                          <i class="icon-apple"></i>
+                                        <img src="/img/site-icons/footer/apple.svg" title="Apple" alt="apple logo">
                                       </a>
                                  </li>
                                  <li class="col">
                                      <a href="https://www.coinomi.com/en/downloads/" target="_blank">
-                                          <i class="icon-desktop"></i>
+                                        <img src="/img/site-icons/footer/desktop.svg" title="Desktop" alt="desktop logo">
                                       </a>
                                  </li>
                               </ul>
                           </div>
                           <div class="col">
-                              <img src="/img/mobile-wallets/edge.png" alt="Wdge Wallet logo" loading="lazy"/>
+                              <img class="ext-wallets" src="/img/mobile-wallets/edge.png" alt="Wdge Wallet logo" loading="lazy"/>
                               <h4>Edge Wallet</h4>
                               <ul class="row">
                                  <li class="col">
                                     <a href="https://play.google.com/store/apps/details?id=co.edgesecure.app" target="_blank">
-                                         <i class="icon-android"></i>
+                                        <img src="/img/site-icons/footer/android.svg" title="Android" alt="android logo">
                                     </a>
                                  </li>
                                   <li class="col">
                                      <a href="https://itunes.apple.com/us/app/edge-bitcoin-wallet/id1344400091?mt=8" target="_blank">
-                                          <i class="icon-apple"></i>
+                                        <img src="/img/site-icons/footer/apple.svg" title="Apple" alt="apple logo">
                                       </a>
                                  </li>
                               </ul>
                           </div>
                           <div class="col">
-                              <img src="/img/mobile-wallets/cobo.png" alt="Cobo Wallet logo" loading="lazy"/>
+                              <img class="ext-wallets" src="/img/mobile-wallets/cobo.png" alt="Cobo Wallet logo" loading="lazy"/>
                               <h4>Cobo Wallet</h4>
                               <ul class="row">
                                  <li class="col">
                                     <a href="https://play.google.com/store/apps/details?id=cobo.wallet" target="_blank">
-                                         <i class="icon-android"></i>
+                                        <img src="/img/site-icons/footer/android.svg" title="Android" alt="android logo">
                                     </a>
                                  </li>
                                   <li class="col">
                                      <a href="https://apps.apple.com/us/app/cobo-crypto-portfolio-wallet/id1406282615" target="_blank">
-                                          <i class="icon-apple"></i>
+                                        <img src="/img/site-icons/footer/apple.svg" title="Apple" alt="apple logo">
                                       </a>
                                  </li>
                               </ul>
                           </div>
                           <div class="col">
-                              <img src="/img/mobile-wallets/ownbit.png" alt="Ownbit Wallet logo" loading="lazy"/>
+                              <img class="ext-wallets" src="/img/mobile-wallets/ownbit.png" alt="Ownbit Wallet logo" loading="lazy"/>
                               <h4>Ownbit Wallet</h4>
                               <ul class="row">
                                  <li class="col">
                                     <a href="https://play.google.com/store/apps/details?id=com.bitbill.www&hl=en" target="_blank">
-                                         <i class="icon-android"></i>
+                                        <img src="/img/site-icons/footer/android.svg" title="Android" alt="android logo">
                                     </a>
                                  </li>
                                   <li class="col">
                                      <a href="https://itunes.apple.com/us/app/bitbill-blockchain-wallet/id1321798216?mt=8" target="_blank">
-                                          <i class="icon-apple"></i>
+                                        <img src="/img/site-icons/footer/apple.svg" title="Apple" alt="apple logo">
                                       </a>
                                  </li>
                               </ul>
