--- a/countdown.html
+++ b/countdown.html
@@ -17,19 +17,19 @@ permalink: /countdown.html
                 <h1>Igniting a new era of privacy</h1>
                 <div class="row count-items">
                   <div class="col">
-                      <p class="count-item">13</p>
+                      <p class="count-item" id="days">13</p>
                       <p class="count-item-desc">days</p>
                   </div>
                   <div class="col">
-                    <p class="count-item">14</p>
+                    <p class="count-item" id="hours">14</p>
                     <p class="count-item-desc">hours</p>
                   </div>
                   <div class="col">
-                    <p class="count-item">15</p>
+                    <p class="count-item" id="minutes">15</p>
                     <p class="count-item-desc">minutes</p>
                   </div>
                   <div class="col">
-                    <p class="count-item">16</p>
+                    <p class="count-item" id="seconds">16</p>
                     <p class="count-item-desc">seconds</p>
                   </div>
                 </div>
@@ -42,6 +42,6 @@ permalink: /countdown.html
       </div>
 
     </main>
-      <script src="/js/main.js"></script> 
+    <script src="./countdown.js"></script> 
   </body>
 </html>
