remove extra time period labels

--- a/countdown.html
+++ b/countdown.html
@@ -18,21 +18,24 @@ permalink: /countdown.html
                 <div class="row count-items">
                   <div class="col">
                       <p class="count-item" id="days">13</p>
-                      <p class="count-item-desc">days</p>
+                      <p class="count-item-desc" id="daysLabel">days</p>
                   </div>
                   <div class="col">
                     <p class="count-item" id="hours">14</p>
-                    <p class="count-item-desc">hours</p>
+                    <p class="count-item-desc" id="hoursLabel">hours</p>
                   </div>
                   <div class="col">
                     <p class="count-item" id="minutes">15</p>
-                    <p class="count-item-desc">minutes</p>
+                    <p class="count-item-desc" id="minutesLabel">minutes</p>
                   </div>
                   <div class="col">
                     <p class="count-item" id="seconds">16</p>
-                    <p class="count-item-desc">seconds</p>
+                    <p class="count-item-desc" id="secondsLabel">seconds</p>
                   </div>
                 </div>
+                <!-- Uncomment this to show activation message after countdown. 
+                <p id="activationMessage" class="count-item-desc"></p>
+                -->
             </div>
         </div>
       </section>
