--- a/countdown.html
+++ b/countdown.html
@@ -1,5 +1,5 @@
 ---
-title: titles.home
+title: Countdown to Spark!
 permalink: /countdown.html
 ---
 
@@ -41,7 +41,7 @@ permalink: /countdown.html
       </section>
 
       <div class="count-float-button">
-         <a class="btn-secondary" href="#">Learn more on Firo.org</a>
+         <a class="btn-secondary" href="{{ site.baseurl }}/index.html">Learn more on Firo.org</a>
       </div>
 
     </main>
