merchants: change arcadiamgroup.com to arcadia.agency

--- a/community/merchants/index.html
+++ b/community/merchants/index.html
@@ -237,7 +237,7 @@ permalink: /community/merchants/index.html
                           <label class="acc-label" for="chck12">{% t merchants.button12 %}</label>
                           <div class="accordion-content col" id="btn12-content">
                                 <div class="row">
-                                   <div class="col"><a href="https://arcadiamgroup.com/" target="_blank"><img src="/img/merchants/logos/arcadia-logo.png" alt="The Arcadia Group logo"/></a></div>
+                                   <div class="col"><a href="https://arcadia.agency/" target="_blank"><img src="/img/merchants/logos/arcadia-logo.png" alt="The Arcadia Group logo"/></a></div>
                                    <div class="col"><a href="https://cypherstack.com/" target="_blank"><img src="/img/merchants/logos/cypherstack-logo.png" alt="Cypher Stack logo"/></a>
                                 </div>
                                 </div>
