buy-firo: cleanup
- adapt swapika rebranding to exchang.io
- remove dead exchange bkex

--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -99,9 +99,6 @@ permalink: /get-firo/buy-firo/index.html
                       <a href="https://fmfw.io/firo-to-usdt" target="_blank"><img src="/img/crypto-exchanges/fmfwio.svg" alt="fmfw logo" title="fmfw.io"/></a>
                   </div>
                   <div class="col">
-                      <a href="https://www.bkex.com/trade/FIRO_USDT" target="_blank"><img src="/img/crypto-exchanges/bkex.svg" alt="Bkex logo" title="bkex.com"/></a>
-                  </div>
-                  <div class="col">
                       <a href="https://www.coinex.com/exchange/firo-usdt" target="_blank"><img src="/img/crypto-exchanges/coinex.svg" alt="Coinex logo" title="coinex.com"/></a>
                   </div>
                   <div class="col">
@@ -183,7 +180,7 @@ permalink: /get-firo/buy-firo/index.html
                       <a href="https://xchange.me/" target="_blank"><img src="/img/coin-swapping/xmlogo.png" alt="xchangeme logo" title="xchange.me"/></a>
                   </div>
                   <div class="col">
-                      <a href="https://swapika.com/" target="_blank"><img src="/img/coin-swapping/swapika-bw.png" alt="Swapika logo" title="swapika.com"/></a>
+                      <a href="https://exchang.io/" target="_blank"><img src="/img/coin-swapping/exchangio.svg" alt="exchang.io logo" title="exchang.io"/></a>
                   </div>
               </div>
           </div>
