--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -89,6 +89,7 @@ permalink: /get-firo/buy-firo/index.html
                   </div>
               </div>
               <div class="row exch-logos">
+                  <div class="col">
                       <a href="https://accounts.binance.com/en/register?ref=37748947" target="_blank"><img src="/img/crypto-exchanges/binance.svg" alt="Binance logo" title="binance.com"/></a>
                   </div>
                   <div class="col">
