--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ permalink: /index.html
                   </div>
              </div>
              <div class="col col-img">
-                <img src="/img/privacy-img.svg" alt="Privacy illustration"/>
+                <img src="/img/privacy-img.svg" alt="Privacy illustration" loading="lazy"/>
              </div>
           </div>
           <div class="row blockchain">
@@ -67,7 +67,7 @@ permalink: /index.html
                   </div>
              </div>
              <div class="col col-img">
-                  <img src="/img/blockchain-img.svg" alt="Blockchain illustration"/>
+                  <img src="/img/blockchain-img.svg" alt="Blockchain illustration" loading="lazy"/>
              </div>
           </div>
           <div class="row infrastructure">
@@ -76,7 +76,7 @@ permalink: /index.html
                   <p>{% t home.privacyin1 %}</p>
              </div>
              <div class="col col-img">
-                <img src="/img/infrastructure-img.svg" alt="Privacy Infrastructure illustration"/>
+                <img src="/img/infrastructure-img.svg" alt="Privacy Infrastructure illustration" loading="lazy"/>
              </div>
           </div>
           <div class="row rnd">
@@ -87,7 +87,7 @@ permalink: /index.html
                   <p><a class="btn-tertiary" href="{{ site.baseurl }}/about/research/"><span>{% t home.cta2 %}</span><i class="icons-right-small"></i></a></p>
              </div>
              <div class="col col-img">
-                  <img src="/img/rnd-img.svg" alt="Blockchain illustration"/>
+                  <img src="/img/rnd-img.svg" alt="Blockchain illustration" loading="lazy"/>
              </div>
           </div>
           </div>
@@ -103,25 +103,25 @@ permalink: /index.html
           </div>
           <div class="row btns">
              <div class="col">
-                  <img src="/img/wallet-icon.svg" alt="" />
+                  <img src="/img/wallet-icon.svg" alt="Image representing a physical Firo wallet" loading="lazy"/>
                   <h3>{% t home.getfiro2 %}</h3>
                   <p>{% t home.getfiro2text %}</p>
                   <p><a href="{{ site.baseurl }}/get-firo/download/"><span>{% t home.getfiro2link %}</span><i class="icons-right-small"></i></a></p>
              </div>
              <div class="col">
-                  <img src="/img/exchange-icon.svg" alt="" />
+                  <img src="/img/exchange-icon.svg" alt="Image representing Firo and Dollars being exchanges" loading="lazy"/>
                   <h3>{% t home.getfiro3 %}</h3>
                   <p>{% t home.getfiro3text %}</p>
                   <p><a href="{{ site.baseurl }}/get-firo/buy-firo/"><span>{% t home.getfiro3link %}</span><i class="icons-right-small"></i></a></p>
              </div>
              <div class="col">
-                  <img src="/img/masternode-icon.svg" alt="" />
+                  <img src="/img/masternode-icon.svg" alt="Image representing a stylized Firo masternode" loading="lazy"/>
                   <h3>{% t home.getfiro4 %}</h3>
                   <p>{% t home.getfiro4text %}</p>
                   <p><a href="{{ site.baseurl }}/guide/masternode-setup.html"><span>{% t home.getfiro4link %}</span><i class="icons-right-small"></i></a></p>
              </div>
              <div class="col">
-                  <img src="/img/mining-icon.svg" alt="" />
+                  <img src="/img/mining-icon.svg" alt="Image showing a mining cart transporting a Firo coin" loading="lazy"/>
                   <h3>{% t home.getfiro5 %}</h3>
                   <p>{% t home.getfiro5text %}</p>
                   <p><a href="{{ site.baseurl }}/guide/how-to-mine-firo.html"><span>{% t home.getfiro5link %}</span><i class="icons-right-small"></i></a></p>
