--- a/about/roadmap/index.html
+++ b/about/roadmap/index.html
@@ -62,13 +62,14 @@ permalink: /about/roadmap/index.html
                               <h3>{% t roadmap.mobile %}</h3>
                               <p>{% t roadmap.mobiledesc %}</p>
                             </li>
+                            <li class="event done">
+                              <h3>{% t roadmap.lelantusspark %}</h3>
+                              <p>{% t roadmap.lelantussparkdesc %}</p>
+                            </li>
                             <li class="event current">
                               <h3>{% t roadmap.elysium %}</h3>
                               <p>{% t roadmap.elysiumdesc %}</p>
-                            </li>
-                            <li class="event current">
-                              <h3>{% t roadmap.lelantusspark %}</h3>
-                              <p>{% t roadmap.lelantussparkdesc %}</p>
+
                             </li>
                           </ul>
                   </div>
