--- a/community/merchants/index.html
+++ b/community/merchants/index.html
@@ -203,7 +203,7 @@ permalink: /community/merchants/index.html
                                    <div class="col"><a href="https://shopping.io" target="_blank"><img src="/img/merchants/logos/shopping-io-logo.png" alt="Shopping.io logo"/></a></div>    
                                    <div class="col"><a href="https://particl.io/" target="_blank"><img src="/img/merchants/logos/particl-logo.png" alt="Particl logo"/></a></div>
                                    <div class="col"><a href="https://privoxy.io/" target="_blank"><img src="/img/merchants/logos/privoxy-logo.png" alt="Privoxy logo"/></a></div>
-                                   <div class="col"><a href="https://www.brand425.com/" target="_blank"><img src="/img/merchants/logos/brand425coffee-logo.png" alt="Brand425Coffee logo"/></a></div>   
+                                   <div class="col"><a href="https://defi-nation.io/" target="_blank"><img src="/img/merchants/logos/definationlogo.png" alt="Defi-Nation logo"/></a></div>   
                                 </div>
                           </div>
                      </div>
