Add merchant-House of Cards (#362)
* Added House of Cards

* Add logo

House of Cards

* Transparent Image

House of Cards

* Update index.html

Updated House of cards transparent image

* Delete logo

Non-transparent logo

* Rename houseogcards.png to houseofcards.png

Typo

--- a/community/merchants/index.html
+++ b/community/merchants/index.html
@@ -203,7 +203,8 @@ permalink: /community/merchants/index.html
                                    <div class="col"><a href="https://shopping.io" target="_blank"><img src="/img/merchants/logos/shopping-io-logo.png" alt="Shopping.io logo"/></a></div>    
                                    <div class="col"><a href="https://particl.io/" target="_blank"><img src="/img/merchants/logos/particl-logo.png" alt="Particl logo"/></a></div>
                                    <div class="col"><a href="https://privoxy.io/" target="_blank"><img src="/img/merchants/logos/privoxy-logo.png" alt="Privoxy logo"/></a></div>
-                                   <div class="col"><a href="https://defi-nation.io/?defi-nation=7" target="_blank"><img src="/img/merchants/logos/definationlogo.png" alt="Defi-Nation logo"/></a></div>   
+                                   <div class="col"><a href="https://defi-nation.io/?defi-nation=7" target="_blank"><img src="/img/merchants/logos/definationlogo.png" alt="Defi-Nation logo"/></a></div>
+                                    <div class="col"><a href="http://www.houseofcards.de/" target="_blank"><img src="/img/merchants/logos/houseofcards.png" alt="House of Cards logo"/></a></div>
                                 </div>
                           </div>
                      </div>
