downloads: add flathub logo and link

--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -66,9 +66,8 @@ permalink: /get-firo/download/index.html
                                     </div>
                               </div>
                             </div>
-                            <div class="source">
-                                <a href="https://github.com/firoorg/firo" target="_blank"><i class="icon-github"></i></a>
-                                <a href="https://sourceforge.net/projects/firoorg/" target="_blank"><i class="icon-sourceforge"></i></a>
+                            <div class="system flathub">
+                                <a href="https://flathub.org/apps/org.firo.firo-qt">{% t download.downloadqtflathub %}</a>
                             </div>
                         </div>
                     </div>
