--- a/about/research/index.html
+++ b/about/research/index.html
@@ -55,7 +55,8 @@ permalink: /about/research/index.html
                                   </div>
 				      <div class="col">
 
-					<a href="{{ site.baseurl }}/blog/assets/Lelantus_Sparks_with_Curve_Trees__Implementation_Notes.pdf" alt="" class="paper-title">Lelantus Spark with Curve Trees</a>
+					<a href="{{ site.baseurl }}/blog/assets/Lelantus_Sparks_with_Curve_Trees__Implementation_Notes.pdf" alt="implementation notes of Lelantus Spark with Curve Trees" class="paper-title">Lelantus Spark with Curve Trees</a>
+
 					<p class="abstract">A recent construction referred to as Curve Trees is a novel and efficient design for membership proofs which significantly optimizes the communication and computational complexity of the argument including the proof sizes, proving time, and verification time. This enables efficient scaling of the set size to billions of elements and very importantly also provides efficient batch verification techniques which further can decrease the marginal cost of proof verification. We discuss how Lelantus Spark can be implemented with Curve Trees to support full membership proofs.</p>
 			      	</div>	      
                               </div>
