migrate bounty program docs to website
add /security.txt
add guide bounty-program.md
move links of bounty program

--- a/guide/index.html
+++ b/guide/index.html
@@ -20,6 +20,7 @@ permalink: /guide/index.html
                   <li><a href="#masternode-guides">Masternodes</a></li>
                   <li><a href="#privacy-tech-guides">Privacy Tech</a></li>
 				  <li><a href="#defi">DeFi</a></li>
+                  <li><a href="#miscellaneous">Miscellaneous</a></li>
               </ul>
           </div>
       </section>
@@ -96,3 +97,16 @@ permalink: /guide/index.html
               </div>
           </div>
 	</section>
+
+    <section class="faq-section" id="miscellaneous">
+        <div class="container">
+             <div class="row">
+                 <div class="col">
+                       <h2>Miscellaneous</h2>
+                       <ul class="guides-list">
+                           <li><a href="{{ site.baseurl }}/guide/bounty-program.html">Firo Vulnerability Bounty Program</a></li>
+                       </ul>
+                 </div>
+             </div>
+         </div>
+   </section>
