--- a/about/research/index.html
+++ b/about/research/index.html
@@ -34,7 +34,7 @@ permalink: /about/research/index.html
                               <p>{% t tech.sparklelantus2 %}</p>
                           </div>
                           <div class="col">
-                              <img src="/img/lelantus-spark.svg" alt=""/>
+                              <img src="/img/lelantus-spark.svg" alt="Technology illustration with Lelantus Spark highlighted">
                           </div>
                       </div>
                       <div class="row">
@@ -98,7 +98,7 @@ permalink: /about/research/index.html
                               <p>{% t tech.lelantus2 %}</p>
                           </div>
                           <div class="col">
-                              <img src="/img/lelantus-upd.svg" alt=""/>
+                              <img src="/img/lelantus-upd.svg" alt="Technology illustration with Lelantus highlighted">
                           </div>
                       </div>
                       <div class="row">
@@ -150,7 +150,7 @@ permalink: /about/research/index.html
 
                           </div>
                           <div class="col">
-                              <img src="/img/sigma-upd.svg" alt=""/>
+                              <img src="/img/sigma-upd.svg" alt="Technology illustration with Sigma highlighted">
                           </div>
                       </div>
                       <div class="row">
@@ -185,7 +185,7 @@ permalink: /about/research/index.html
 
                           </div>
                           <div class="col">
-                              <img src="/img/mtp-upd.svg" alt=""/>
+                              <img src="/img/mtp-upd.svg" alt="Technology illustration with MTP highlighted">
                           </div>
                       </div>
                       <div class="row">
