--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -217,7 +217,7 @@ permalink: /get-firo/download/index.html
               </div>
               <div class="row mob-wallets">
 		      <div class="col">
-                              <img class="ext-wallets" src="/img/mobile-wallets/now-wallet-logo.png" alt="NOW Wallet logo" loading="lazy"/>
+                              <img class="ext-wallets" src="/img/mobile-wallets/now-wallet-logo.png" alt="NOW Wallet logo" loading="lazy">
                               <h4>NOW Wallet</h4>
                               <ul class="row">
                                  <li class="col">
@@ -233,7 +233,7 @@ permalink: /get-firo/download/index.html
                               </ul>
                           </div>
                           <div class="col">
-                              <img class="ext-wallets" src="/img/mobile-wallets/zelcore.png" alt="ZelCore Wallet Logo" loading="lazy"/>
+                              <img class="ext-wallets" src="/img/mobile-wallets/zelcore.png" alt="ZelCore Wallet Logo" loading="lazy">
                               <h4>ZelCore Wallet</h4>
                               <ul class="row">
                                  <li class="col">
@@ -254,7 +254,7 @@ permalink: /get-firo/download/index.html
                               </ul>
                           </div>
                           <div class="col">
-                              <img class="ext-wallets" src="/img/mobile-wallets/guarda-new.png" alt="Guarda Wallet logo" loading="lazy"/>
+                              <img class="ext-wallets" src="/img/mobile-wallets/guarda-new.png" alt="Guarda Wallet logo" loading="lazy">
                               <h4>Guarda Wallet</h4>
                               <ul class="row">
                                  <li class="col">
@@ -280,7 +280,7 @@ permalink: /get-firo/download/index.html
                               </ul>
                           </div>
                           <div class="col">
-                              <img class="ext-wallets" src="/img/mobile-wallets/trust.png" alt="Trust Wallet logo" loading="lazy"/>
+                              <img class="ext-wallets" src="/img/mobile-wallets/trust.png" alt="Trust Wallet logo" loading="lazy">
                               <h4>Trust Wallet</h4>
                               <ul class="row">
                                  <li class="col">
@@ -296,7 +296,7 @@ permalink: /get-firo/download/index.html
                               </ul>
                           </div>
                           <div class="col">
-                              <img class="ext-wallets" src="/img/mobile-wallets/coinomi.png" alt="Coinomi Wallet logo" loading="lazy"/>
+                              <img class="ext-wallets" src="/img/mobile-wallets/coinomi.png" alt="Coinomi Wallet logo" loading="lazy">
                               <h4>Coinomi Wallet</h4>
                               <ul class="row">
                                  <li class="col">
@@ -317,7 +317,7 @@ permalink: /get-firo/download/index.html
                               </ul>
                           </div>
                           <div class="col">
-                              <img class="ext-wallets" src="/img/mobile-wallets/edge.png" alt="Wdge Wallet logo" loading="lazy"/>
+                              <img class="ext-wallets" src="/img/mobile-wallets/edge.png" alt="Wdge Wallet logo" loading="lazy">
                               <h4>Edge Wallet</h4>
                               <ul class="row">
                                  <li class="col">
@@ -333,7 +333,7 @@ permalink: /get-firo/download/index.html
                               </ul>
                           </div>
                           <div class="col">
-                              <img class="ext-wallets" src="/img/mobile-wallets/cobo.png" alt="Cobo Wallet logo" loading="lazy"/>
+                              <img class="ext-wallets" src="/img/mobile-wallets/cobo.png" alt="Cobo Wallet logo" loading="lazy">
                               <h4>Cobo Wallet</h4>
                               <ul class="row">
                                  <li class="col">
@@ -349,7 +349,7 @@ permalink: /get-firo/download/index.html
                               </ul>
                           </div>
                           <div class="col">
-                              <img class="ext-wallets" src="/img/mobile-wallets/ownbit.png" alt="Ownbit Wallet logo" loading="lazy"/>
+                              <img class="ext-wallets" src="/img/mobile-wallets/ownbit.png" alt="Ownbit Wallet logo" loading="lazy">
                               <h4>Ownbit Wallet</h4>
                               <ul class="row">
                                  <li class="col">
