--- a/about/team/index.html
+++ b/about/team/index.html
@@ -23,7 +23,7 @@ permalink: /about/team/index.html
             <div class="col tmember">
                 <div class="row">
                     <div class="col">
-                        <img src="/img/team/poramin.jpg" alt=""/>
+                        <img src="/img/team/poramin.jpg" alt="Picture of Poramin Insom">
                     </div>
                     <div class="col">
                         <h4>{% t team.poramininsom.name %}</h4>
@@ -35,7 +35,7 @@ permalink: /about/team/index.html
             <div class="col tmember">
                 <div class="row">
                     <div class="col">
-                        <img src="/img/team/reuben.jpg" alt=""/>
+                        <img src="/img/team/reuben.jpg" alt="Picture of Reuben Yap">
                     </div>
                     <div class="col">
                         <h4>{% t team.reubenyap.name %}</h4>
@@ -59,7 +59,7 @@ permalink: /about/team/index.html
                   <div class="col tmember">
                       <div class="row">
                           <div class="col">
-                              <img src="/img/team/petershugalev.jpg" alt=""/>
+                              <img src="/img/team/petershugalev.jpg" alt="Picture Peter Shugalev">
                           </div>
                           <div class="col">
                               <h4>{% t team.petershugalev.name %}</h4>
@@ -71,7 +71,7 @@ permalink: /about/team/index.html
                   <div class="col tmember">
                       <div class="row">
                           <div class="col">
-                              <img src="/img/team/levon.jpg" alt=""/>
+                              <img src="/img/team/levon.jpg" alt="Picture of Levon Petrosyan">
                           </div>
                           <div class="col">
                               <h4>{% t team.levonpetrosyan.name %}</h4>
@@ -83,7 +83,7 @@ permalink: /about/team/index.html
                   <div class="col tmember">
                     <div class="row">
                         <div class="col">
-                            <img src="/img/team/gevorg.jpg" alt=""/>
+                            <img src="/img/team/gevorg.jpg" alt="Picture of Gevorg Mirzoyan">
                         </div>
                         <div class="col">
                             <h4>{% t team.gevorgmirzoyan.name %}</h4>
@@ -107,7 +107,7 @@ permalink: /about/team/index.html
              <div class="col tmember">
                  <div class="row">
                      <div class="col">
-                         <img src="/img/team/zorayr-zakaryan_pic.jpg" alt=""/>
+                         <img src="/img/team/zorayr-zakaryan_pic.jpg" alt="Picture of Zorayr Zakaryan">
                      </div>
                      <div class="col">
                          <h4>{% t team.zorayrzakaryan.name %}</h4>
@@ -119,7 +119,7 @@ permalink: /about/team/index.html
              <div class="col tmember">
                  <div class="row">
                      <div class="col">
-                         <img src="/img/team/hakob-kanoyan_pic.jpg" alt=""/>
+                         <img src="/img/team/hakob-kanoyan_pic.jpg" alt="Picture Hakob Kanoyan">
                      </div>
                      <div class="col">
                          <h4>{% t team.hakobkanoyan.name %}</h4>
@@ -131,7 +131,7 @@ permalink: /about/team/index.html
              <div class="col tmember">
                 <div class="row">
                     <div class="col">
-                        <img src="/img/team/hayk-zakaryan_pic.jpg" alt=""/>
+                        <img src="/img/team/hayk-zakaryan_pic.jpg" alt="Picure of Hayk Zakaryan">
                     </div>
                     <div class="col">
                         <h4>{% t team.haykzakaryan.name %}</h4>
@@ -143,7 +143,7 @@ permalink: /about/team/index.html
              <div class="col tmember">
                 <div class="row">
                     <div class="col">
-                        <img src="/img/team/armine-zakaryan_pic.jpg" alt=""/>
+                        <img src="/img/team/armine-zakaryan_pic.jpg" alt="Picture Armine Zakaryan">
                     </div>
                     <div class="col">
                         <h4>{% t team.arminezakaryan.name %}</h4>
@@ -168,7 +168,7 @@ permalink: /about/team/index.html
             <div class="col tmember">
                 <div class="row">
                     <div class="col">
-                        <img src="/img/team/anwar.jpg" alt=""/>
+                        <img src="/img/team/anwar.jpg" alt="Picture of Anwar P.">
                     </div>
                     <div class="col">
                         <h4>{% t team.anwarp.name %}</h4>
@@ -180,7 +180,7 @@ permalink: /about/team/index.html
             <div class="col tmember">
                 <div class="row">
                     <div class="col">
-                        <img src="/img/team/ajay.jpg" alt=""/>
+                        <img src="/img/team/ajay.jpg" alt="Picture of Ajaydono">
                     </div>
                     <div class="col">
                         <h4>{% t team.ajaydono.name %}</h4>
@@ -192,7 +192,7 @@ permalink: /about/team/index.html
             <div class="col tmember">
                 <div class="row">
                     <div class="col">
-                        <img src="/img/team/lucas-fullam.jpg" alt=""/>
+                        <img src="/img/team/lucas-fullam.jpg" alt="Picture of Lucas Fullam">
                     </div>
                     <div class="col">
                         <h4>{% t team.lucasfullam.name %}</h4>
@@ -204,7 +204,7 @@ permalink: /about/team/index.html
             <div class="col tmember">
                 <div class="row">
                     <div class="col">
-                        <img src="/img/team/sebastian.jpg" alt=""/>
+                        <img src="/img/team/sebastian.jpg" alt="Picture of Sebastian Bausch">
                     </div>
                     <div class="col">
                         <h4>{% t team.sebastianbausch.name %}</h4>
@@ -216,7 +216,7 @@ permalink: /about/team/index.html
              <div class="col tmember">
                  <div class="row">
                      <div class="col">
-                         <img src="/img/team/lemar.jpg" alt=""/>
+                         <img src="/img/team/lemar.jpg" alt="Picture of Lemar 'Luke' Briones">
                      </div>
                      <div class="col">
                          <h4>{% t team.lemarlukebriones.name %}</h4>
@@ -240,7 +240,7 @@ permalink: /about/team/index.html
                   <div class="col tmember">
                       <div class="row">
                           <div class="col">
-                              <img src="/img/team/aram.jpg" alt=""/>
+                              <img src="/img/team/aram.jpg" alt="Picture of Aram Jivanyan">
                           </div>
                           <div class="col">
                               <h4>{% t team.aramjivanyan.name %}</h4>
@@ -252,7 +252,7 @@ permalink: /about/team/index.html
                   <div class="col tmember">
                       <div class="row">
                           <div class="col">
-                              <img src="/img/team/Areg-Vrtanesyan.png" alt=""/>
+                              <img src="/img/team/Areg-Vrtanesyan.png" alt="Picture of Areg Vrtanesyan">
                           </div>
                           <div class="col">
                               <h4>{% t team.aregvrtanesyan.name %}</h4>
