--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -39,10 +39,10 @@ permalink: /get-firo/buy-firo/index.html
           </div>
           <div class="row exch-logos">
               <div class="col">
-                  <a href="https://github.com/firoorg/FiroDEX-Desktop/releases/latest" target="_blank"><img src="/img/dex/firodex-logo.png" alt="FiroDEX logo" title="FiroDEX"/></a>
+                  <a href="https://github.com/firoorg/FiroDEX-Desktop/releases/latest" target="_blank"><img src="/img/dex/firodex-logo.png" alt="FiroDEX logo" title="FiroDEX"></a>
               </div>
               <div class="col">
-                  <a href="https://incognito.org/" target="_blank"><img src="/img/dex/incognito-logo.png" alt="Incognito logo" title="incognito.org"/></a>
+                  <a href="https://incognito.org/" target="_blank"><img src="/img/dex/incognito-logo.png" alt="Incognito logo" title="incognito.org"></a>
               </div>
           </div>
         </div>
@@ -57,25 +57,25 @@ permalink: /get-firo/buy-firo/index.html
               </div>
               <div class="row exch-logos">
                 <div class="col">
-                    <a href="https://digitalexchange.id/" target="_blank"><img src="/img/fiat-exchanges/digitalexchange.svg" alt="digitalexchange logo" title="digitalexchange.id"/></a>
+                    <a href="https://digitalexchange.id/" target="_blank"><img src="/img/fiat-exchanges/digitalexchange.svg" alt="digitalexchange logo" title="digitalexchange.id"></a>
                 </div>
                   <div class="col">
-                    <a href="https://fiatom.io/" target="_blank"><img src="/img/fiat-exchanges/fiatom.svg" alt="Fiatom logo" title="fiatom.io"/></a>
+                    <a href="https://fiatom.io/" target="_blank"><img src="/img/fiat-exchanges/fiatom.svg" alt="Fiatom logo" title="fiatom.io"></a>
                 </div>
                   <div class="col">
-                      <a href="https://guardarian.com/" target="_blank"><img src="/img/fiat-exchanges/guardarian.svg" alt="Guardarian logo" title="guardarian.com"/></a>
+                      <a href="https://guardarian.com/" target="_blank"><img src="/img/fiat-exchanges/guardarian.svg" alt="Guardarian logo" title="guardarian.com"></a>
                   </div>
                   <div class="col">
-                      <a href="https://indodax.com/market/FIROIDR" target="_blank"><img src="/img/fiat-exchanges/indodax.svg" alt="Indodax logo" title="indodax.com"/></a>
+                      <a href="https://indodax.com/market/FIROIDR" target="_blank"><img src="/img/fiat-exchanges/indodax.svg" alt="Indodax logo" title="indodax.com"></a>
                   </div> 
                   <div class="col">
-                    <a href="https://kriptomat.io/cryptocurrency-prices/firo-price/" target="_blank"><img src="/img/fiat-exchanges/kriptomat-logo.svg" alt="Kriptomat logo" title="kriptomat.io"/></a>
+                    <a href="https://kriptomat.io/cryptocurrency-prices/firo-price/" target="_blank"><img src="/img/fiat-exchanges/kriptomat-logo.svg" alt="Kriptomat logo" title="kriptomat.io"></a>
                   </div>               
                   <div class="col">
-                      <a href="https://satangcorp.com/exchange/en/trade/XZC_THB" target="_blank"><img src="/img/fiat-exchanges/satang.svg" alt="Satang logo" title="satangcorp.com"/></a>
+                      <a href="https://satangcorp.com/exchange/en/trade/XZC_THB" target="_blank"><img src="/img/fiat-exchanges/satang.svg" alt="Satang logo" title="satangcorp.com"></a>
                   </div>
                   <div class="col">
-                        <a href="https://sevenb.io/" target="_blank"><img src="/img/fiat-exchanges/7b_logo.svg" alt="Sevenb logo" title="sevenb.io"/></a>
+                        <a href="https://sevenb.io/" target="_blank"><img src="/img/fiat-exchanges/7b_logo.svg" alt="Sevenb logo" title="sevenb.io"></a>
                   </div>
               </div>
           </div>
@@ -90,37 +90,37 @@ permalink: /get-firo/buy-firo/index.html
               </div>
               <div class="row exch-logos">
                   <div class="col">
-                      <a href="https://accounts.binance.com/en/register?ref=37748947" target="_blank"><img src="/img/crypto-exchanges/binance.svg" alt="Binance logo" title="binance.com"/></a>
+                      <a href="https://accounts.binance.com/en/register?ref=37748947" target="_blank"><img src="/img/crypto-exchanges/binance.svg" alt="Binance logo" title="binance.com"></a>
                   </div>
                   <div class="col">
-                      <a href="https://fmfw.io/firo-to-usdt" target="_blank"><img src="/img/crypto-exchanges/fmfwio.svg" alt="fmfw logo" title="fmfw.io"/></a>
+                      <a href="https://fmfw.io/firo-to-usdt" target="_blank"><img src="/img/crypto-exchanges/fmfwio.svg" alt="fmfw logo" title="fmfw.io"></a>
                   </div>
                   <div class="col">
-                      <a href="https://www.coinex.com/exchange/firo-usdt" target="_blank"><img src="/img/crypto-exchanges/coinex.svg" alt="Coinex logo" title="coinex.com"/></a>
+                      <a href="https://www.coinex.com/exchange/firo-usdt" target="_blank"><img src="/img/crypto-exchanges/coinex.svg" alt="Coinex logo" title="coinex.com"></a>
                   </div>
                   <div class="col">
-                    <a href="https://exchange-assets.com/" target="_blank"><img src="/img/crypto-exchanges/exchange_assets.svg" alt="Exchange-Assets logo" title="exchange-assets.com"/></a>
+                    <a href="https://exchange-assets.com/" target="_blank"><img src="/img/crypto-exchanges/exchange_assets.svg" alt="Exchange-Assets logo" title="exchange-assets.com"></a>
                   </div>
                   <div class="col">
-                      <a href="https://www.finexbox.com/market/pair/FIRO-BTC.html" target="_blank"><img src="/img/crypto-exchanges/finebox.svg" alt="finexbox logo" title="finexbox.com"/></a>
+                      <a href="https://www.finexbox.com/market/pair/FIRO-BTC.html" target="_blank"><img src="/img/crypto-exchanges/finebox.svg" alt="finexbox logo" title="finexbox.com"></a>
                   </div>
                   <div class="col">
-                      <a href="https://www.gate.io/trade/FIRO_USDT" target="_blank"><img src="/img/crypto-exchanges/gateio_h_en.svg" alt="Gate.io logo" title="gate.io"/></a>
+                      <a href="https://www.gate.io/trade/FIRO_USDT" target="_blank"><img src="/img/crypto-exchanges/gateio_h_en.svg" alt="Gate.io logo" title="gate.io"></a>
                   </div>
                   <div class="col">
-                      <a href="https://hitbtc.com/firo-to-usdt" target="_blank"><img src="/img/crypto-exchanges/hitbtc.svg" alt="hitbtc logo" title="hitbtc.com"/></a>
+                      <a href="https://hitbtc.com/firo-to-usdt" target="_blank"><img src="/img/crypto-exchanges/hitbtc.svg" alt="HitBTC logo" title="hitbtc.com"></a>
                   </div>
                   <div class="col">
-                      <a href="https://www.huobi.com/en-us/exchange/firo_usdt/" target="_blank"><img src="/img/crypto-exchanges/huobi.svg" alt="Huobi logo" title="huobi.com"/></a>
+                      <a href="https://www.huobi.com/en-us/exchange/firo_usdt/" target="_blank"><img src="/img/crypto-exchanges/huobi.svg" alt="Huobi logo" title="huobi.com"></a>
                   </div>
                   <div class="col">
-                      <a href="https://www.mexc.com/exchange/FIRO_USDT" target="_blank"><img src="/img/crypto-exchanges/mxc_exchange.svg" alt="mexc logo" title="mexc.com"/></a>
+                      <a href="https://www.mexc.com/exchange/FIRO_USDT" target="_blank"><img src="/img/crypto-exchanges/mxc_exchange.svg" alt="mexc logo" title="mexc.com"></a>
                   </div>
                   <div class="col">
-                    <a href="https://tradeogre.com/exchange/BTC-FIRO" target="_blank"><img src="/img/crypto-exchanges/tradeogre-logo.png" alt="Tradeogre logo" title="tradeogre.com"/></a>
+                    <a href="https://tradeogre.com/exchange/BTC-FIRO" target="_blank"><img src="/img/crypto-exchanges/tradeogre-logo.png" alt="Tradeogre logo" title="tradeogre.com"></a>
                   </div>
                   <div class="col">
-                      <a href="https://wazirx.com/exchange/FIRO-USDT" target="_blank"><img src="/img/crypto-exchanges/wazirx.svg" alt="Wazirx logo" title="wazirx.com"/></a>
+                      <a href="https://wazirx.com/exchange/FIRO-USDT" target="_blank"><img src="/img/crypto-exchanges/wazirx.svg" alt="Wazirx logo" title="wazirx.com"></a>
                   </div>
               </div>
           </div>
@@ -135,46 +135,46 @@ permalink: /get-firo/buy-firo/index.html
               </div>
               <div class="row exch-logos">
                   <div class="col">
-                      <a href="https://changenow.io/currencies/firo?utm_campaign=firo%20website%20traffic" target="_blank"><img src="/img/coin-swapping/change_now_logo.svg" alt="Changenow logo" title="changenow.io"/></a>
+                      <a href="https://changenow.io/currencies/firo?utm_campaign=firo%20website%20traffic" target="_blank"><img src="/img/coin-swapping/change_now_logo.svg" alt="Changenow logo" title="changenow.io"></a>
                   </div>
                   <div class="col">
-                      <a href="https://letsexchange.io/" target="_blank"><img src="/img/coin-swapping/letsexchange.svg" alt="LetsExchange logo" title="letsexchange.io"/></a>
+                      <a href="https://letsexchange.io/" target="_blank"><img src="/img/coin-swapping/letsexchange.svg" alt="LetsExchange logo" title="letsexchange.io"></a>
                   </div>
                   <div class="col">
-                      <a href="https://changelly.com/" target="_blank"><img src="/img/coin-swapping/changelly.svg" alt="Changelly logo" title="changelly.com"/></a>
+                      <a href="https://changelly.com/" target="_blank"><img src="/img/coin-swapping/changelly.svg" alt="Changelly logo" title="changelly.com"></a>
                   </div>
                   <div class="col">
-                    <a href="https://exolix.com/" target="_blank"><img src="/img/coin-swapping/exolix.svg" alt="Exolix logo" title="exolix.com"/></a>
+                    <a href="https://exolix.com/" target="_blank"><img src="/img/coin-swapping/exolix.svg" alt="Exolix logo" title="exolix.com"></a>
                   </div>
                   <div class="col">
-                    <a href="https://www.localparticl.com/" target="_blank"><img src="/img/coin-swapping/localparticl.svg" alt="Localparticl logo" title="localparticl.com"/></a>
+                    <a href="https://www.localparticl.com/" target="_blank"><img src="/img/coin-swapping/localparticl.svg" alt="Localparticl logo" title="localparticl.com"></a>
                   </div>          
                   <div class="col">
-                    <a href="https://majesticbank.sc/" target="_blank"><img src="/img/coin-swapping/majesticbank.svg" alt="Majestic Bank logo" title="majesticbank.sc"/></a>
+                    <a href="https://majesticbank.sc/" target="_blank"><img src="/img/coin-swapping/majesticbank.svg" alt="Majestic Bank logo" title="majesticbank.sc"></a>
                   </div>  
                   <div class="col">
-                      <a href="https://simpleswap.io/" target="_blank"><img src="/img/coin-swapping/simpleswap.svg" alt="SimpleSwap logo" title="simpleswap.io"/></a>
+                      <a href="https://simpleswap.io/" target="_blank"><img src="/img/coin-swapping/simpleswap.svg" alt="SimpleSwap logo" title="simpleswap.io"></a>
                   </div>
                   <div class="col">
-                      <a href="https://stealthex.io/" target="_blank"><img src="/img/coin-swapping/stealthex.svg" alt="Stealthex logo" title="stealthex.io"/></a>
+                      <a href="https://stealthex.io/" target="_blank"><img src="/img/coin-swapping/stealthex.svg" alt="Stealthex logo" title="stealthex.io"></a>
                   </div>
                   <div class="col">
-                      <a href="https://swapspace.co/exchange/firo?utm_medium=referral&utm_source=firo&utm_campaign=coinlistings" target="_blank"><img src="/img/coin-swapping/swapspace.svg" alt="Swapspace logo" title="swapspace.co"/></a>
+                      <a href="https://swapspace.co/exchange/firo?utm_medium=referral&utm_source=firo&utm_campaign=coinlistings" target="_blank"><img src="/img/coin-swapping/swapspace.svg" alt="Swapspace logo" title="swapspace.co"></a>
                   </div>
                   <div class="col">
-                      <a href="https://swapswop.io/" target="_blank"><img src="/img/coin-swapping/swapswop.svg" alt="Swapswop logo" title="swapswop.io"/></a>
+                      <a href="https://swapswop.io/" target="_blank"><img src="/img/coin-swapping/swapswop.svg" alt="Swapswop logo" title="swapswop.io"></a>
                   </div>
                   <div class="col">
-                      <a href="https://swapzone.io/?refId=hZ9pjEPNe" target="_blank"><img src="/img/coin-swapping/swapzone.svg" alt="Swapzone logo" title="swapzone.io"/></a>
+                      <a href="https://swapzone.io/?refId=hZ9pjEPNe" target="_blank"><img src="/img/coin-swapping/swapzone.svg" alt="Swapzone logo" title="swapzone.io"></a>
                   </div>
                   <div class="col">
-                      <a href="https://www.wizardswap.io/" target="_blank"><img src="/img/coin-swapping/wizardswap.svg" alt="Wizardswap logo" title="wizardswap.io"/></a>
+                      <a href="https://www.wizardswap.io/" target="_blank"><img src="/img/coin-swapping/wizardswap.svg" alt="Wizardswap logo" title="wizardswap.io"></a>
                   </div>
                   <div class="col">
-                      <a href="https://xchange.me/" target="_blank"><img src="/img/coin-swapping/xmlogo.png" alt="xchangeme logo" title="xchange.me"/></a>
+                      <a href="https://xchange.me/" target="_blank"><img src="/img/coin-swapping/xmlogo.png" alt="xchangeme logo" title="xchange.me"></a>
                   </div>
                   <div class="col">
-                      <a href="https://exchang.io/" target="_blank"><img src="/img/coin-swapping/exchangio.svg" alt="exchang.io logo" title="exchang.io"/></a>
+                      <a href="https://exchang.io/" target="_blank"><img src="/img/coin-swapping/exchangio.svg" alt="exchang.io logo" title="exchang.io"></a>
                   </div>
               </div>
           </div>
